--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
     android:padding="16dp">
 
-    <!-- Contenu de l'interface utilisateur -->
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/toastButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello, FinalExamApp!"
-        android:textSize="18sp"
-        android:padding="8dp" />
+        android:text="Afficher un Toast" />
+
+    <Button
+        android:id="@+id/snackbarButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Afficher un Snackbar"
+        android:layout_marginTop="16dp" />
+
+    <Button
+        android:id="@+id/notificationButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Afficher une Notification"
+        android:layout_marginTop="16dp" />
 
 </LinearLayout>
